# covid19-prototype

./: .gitignore  .gitmodules  README.md
DICOMAnonymizer/: .gitignore  CMakeLists.txt  README.md  anonymize.cpp  build.sh  build_priv.sh  index.html  stripDataset.cpp  stripDataset.h  utils.cpp  utils.h  wrap.js
DICOMAnonymizer/.devcontainer/: Dockerfile
DICOMAnonymizer/dcmtk-3.6.0/ofstd/libsrc/: ofstd.cc
DICOMAnonymizer/dcmtk/config_cpp/dcmtk/config/: _osconfig.h  cfunix.h
DICOMAnonymizer/dcmtk/dcmtk-3.6.0/dcmdata/libsrc/: dcvrul.cc
DICOMAnonymizer/docker/: docker-compose.yml
DICOMAnonymizer/docker/nginx/: default.conf
DICOMAnonymizer/src/: README.md  anonymize.cpp  emscripten-pre.js  extra.js  index.html  library.js  main.cpp  stripDataset.cpp  utils.cpp  wrap.js
DICOMAnonymizer/test_images/: README.md
DICOMAnonymizer/tests/: CMakeLists.txt  anonymizeTest.cpp
